fluentd-mtls.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: fluentd-logging
    kubernetes.io/cluster-service: "true"
    pod-template-generation: "1"
    version: v1
  name: fluentd
  namespace: kube-system
spec:
  ports:
    - port: 24224
      protocol: TCP
      targetPort: 24224
  selector:
    k8s-app: fluentd-logging
    kubernetes.io/cluster-service: "true"
    pod-template-generation: "1"
    version: v1
  type: ClusterIP
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: kube-system
  labels:
    k8s-app: fluentd-logging
    version: v1
    kubernetes.io/cluster-service: "true"
spec:
  selector:
    matchLabels:
      k8s-app: fluentd-logging
      version: v1
  template:
    metadata:
      labels:
        k8s-app: fluentd-logging
        version: v1
        kubernetes.io/cluster-service: "true"
    spec:
      serviceAccount: fluentd
      serviceAccountName: fluentd
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
        - name: fluentd
          image: fluent/fluentd-kubernetes-daemonset:v1-debian-opensearch
          #        image: fluent/fluentd-kubernetes-daemonset:elasticsearch
          #      - name: fluentd
          #        image: fluent/fluentd-kubernetes-daemonset:v1.3.3-debian-elasticsearch-1.7
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: varlibdockercontainers
              mountPath: /var/lib/docker/containers
            - name:  fdconf
              mountPath:  /fluentd/etc/
              readOnly: true
            - name: certificate
              mountPath: /etc/ssl/certs/certificate.pem
              subPath: certificate.pem
              readOnly: false
            - name: ladcsteam-opensearch-certificate
              mountPath: /etc/ssl/certs/ladcsteam_opensearch_certificate.pem
              subPath: ladcsteam_opensearch_certificate.pem
              readOnly: false
            - name: oci-api-key-ladcsteam
              mountPath: /etc/ssl/certs/oci_api_key_ladcsteam.pem
              subPath: oci_api_key_ladcsteam.pem
              readOnly: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: varlibdockercontainers
          hostPath:
            path: /var/lib/docker/containers
        - name: certificate
          configMap:
            name: certificate
        - name: ladcsteam-opensearch-certificate
          configMap:
            name: ladcsteam-opensearch-certificate
        - name: oci-api-key-ladcsteam
          configMap:
            name: oci-api-key-ladcsteam
        - name: fdconf
          configMap:
            name: fluentdconf
---
# kubectl -n kube-system create configmap certificate --from-file=certificate.pem
# kubectl -n kube-system create configmap ladcsteam-opensearch-certificate --from-file=ladcsteam_opensearch_certificate.pem
# kubectl -n kube-system create configmap oci-api-key-ladcsteam --from-file=oci_api_key_ladcsteam.pem
