kubernetes.yaml
apiVersion: v1
kind: Service
metadata:
  name: consultacep-service
  labels:
    app: consultacep
spec:
  selector:
    app: consultacep
  type: NodePort
  ports:
    - port: 3003
      nodePort: 32641
---
apiVersion: apps/v1
kind: Deployment
metadata:
  #Canarian OK POD
  #name: consultacep-deployment
  #Canarian NOK POD
  name: consultacep-deployment-nok
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consultacep
  template:
    metadata:
      labels:
        app: consultacep
        #version: ok
        version: nok
    spec:
      containers:
        - name: consultacep
          image: iad.ocir.io/idavixsf5sbx/cristianohoshikawa/consultacep:latest
          ports:
            - containerPort: 3003
      imagePullSecrets:
        # enter the name of the secret you created
        - name: ocirsecret
