ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: consultacep-gateway
spec:
  selector:
    istio: ingressgateway # use the Istio default gateway implementation
  servers:
    - port:
        number: 3003
        name: consultacep
        protocol: TCP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: consultacep-vts
spec:
  hosts:
    - "*"
  gateways:
    - consultacep-gateway
  tcp:
    - match:
        - port: 3003
      route:
        - destination:
            port:
              number: 3003
            host: consultacep-service
